err/nodebox-color.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/colors'...
Compiling './lib/python3.5/site-packages/colors/__init__.py'...
***   File "./lib/python3.5/site-packages/colors/__init__.py", line 568
    raise AttributeError, "'"+str(self.__class__)+"' object has no attribute '"+a+"'"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/colors/aggregated'...
Listing './lib/python3.5/site-packages/colors/aggregated/adjectives'...
Listing './lib/python3.5/site-packages/colors/aggregated/basic_english'...
Listing './lib/python3.5/site-packages/colors/aggregated/emotion'...
Listing './lib/python3.5/site-packages/colors/aggregated/nature'...
Compiling './lib/python3.5/site-packages/colors/colors_example6.py'...
***   File "./lib/python3.5/site-packages/colors/colors_example6.py", line 38
    print "ancient egypt + love = ", t3.name
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/colors/colors_example8.py'...
***   File "./lib/python3.5/site-packages/colors/colors_example8.py", line 78
    print q, "is-a", l
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/colors/context'...
Listing './lib/python3.5/site-packages/nodebox_color-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
